--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -8,14 +8,14 @@
 
 .div_content {width: 940px;padding-left: 20px;padding-top: 40px;background-color: #ffffff;border-bottom: 1px solid #cccccc;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom-left-radius:4px;border-bottom-right-radius:4px;}
 
-.div_split {width: 900px;display: block;text-align: left;padding-top: 2px;font-size: 15px;margin-bottom: 10px;height: 70px;position: relative;}
+.div_split {width: 900px;display: block;text-align: left;padding-top: 2px;font-size: 14px;margin-bottom: 10px;height: 70px;position: relative;}
 
 .span_split {font-size: 18px;margin-bottom: 5px;line-height: 40px;display: block;color: #333333;}
 
 .em_split {width: 900px;height: 1px;float: left;background: #cccccc;}
 
-.div_row {width: 900px;height: 60px;text-align: left;padding-top: 2px;font-size: 15px;margin-left: 10px;margin-bottom: 30px;position: relative;display: block;}
-.div_row_zp{width: 900px;height: 180px;text-align: left;padding-top: 2px;font-size: 15px;margin-left: 10px;margin-bottom: 20px;position: relative;display: block;}
+.div_row {width: 900px;height: 40px;text-align: left;padding-top: 2px;font-size: 14px;margin-left: 10px;margin-bottom: 30px;position: relative;display: block;}
+.div_row_zp{width: 900px;height: 180px;text-align: left;padding-top: 2px;font-size: 14px;margin-left: 10px;margin-bottom: 20px;position: relative;display: block;}
 .div_row_zp_value{ height: auto;display: none;}
 .div_row_left {color: black;text-align: right;margin-left: 60px;display: inline;font-size: 14px;height: 170px;}
 .span_row_left_fwzp{width: 56px; display: inline-block;}
@@ -23,7 +23,7 @@
 .div_row_right_bcms{ width: 594px; height: 240px; display: inline-block;}
 .div_row_right_zp{width: 670px;display: inline-block;}
 .div_row_right_zp .ulImgs{ padding-left: 10px;}
-.div_row_right_zp_info{ margin-left: 185px; font-size: 14px; color: #999999;}
+.div_row_right_zp_info{ margin-left: 175px; font-size: 12px; color: #999999;}
 .div_row .font_QQ{ margin-left: 98px;}
 .div_row .font_two{ margin-left: 92px;}
 .div_row .font_three{ margin-left: 75px;}
@@ -44,7 +44,7 @@
 
 .div_select_dropdown {float: left; width: 150px;position: relative;z-index: 1001;}
 
-.span_select {display: inline-block;width: 130px;height: 30px;text-align: center;margin-top: 4px;}
+.span_select {display: inline-block;width: 130px;height: 30px;text-align: center;margin-top: 6px;}
 
 .span_select_arrow {background-image: url(../images/arrow_down.png);width: 16px;height: 16px;display: inline-block;vertical-align: middle;}
 
@@ -64,9 +64,9 @@
 
 .input_input {width: 472px;padding: 6px 12px;border: 1px solid #cccccc;border-radius: 4px;font-size: 14px;height: 40px;}
 
-.Warn {font-size: 14px;color: #F2272D;margin-left: 180px;position: relative;display: block;margin-top: 6px;}
+.Warn {font-size: 12px;color: #F2272D;margin-left: 175px;position: relative;display: block;}
 
-.Info {font-size: 14px;color: #bc6ba6;margin-left: 180px;z-index: 999;position: relative;margin-top: 6px;}
+.Info {font-size: 12px;color: #bc6ba6;margin-left: 175px;position: relative;z-index: 999;}
 
 .div_bqss {margin-top: -7px;margin-left: -1px;width: 620px;height: 344px;border: 1px solid #ccc;background-color: #fff;}
 
@@ -91,21 +91,21 @@
 
 .span_mc:hover {color: #bc6ba6;font-weight: 700;}
 
-.input_content {width: 451px;cursor: default;border: 2px solid #ccc;border-radius: 4px;height: 34px;padding: 4px 12px;display: inline-block;}
+.input_content {width: 451px;cursor: default;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 4px 12px;display: inline-block;}
 
 :-ms-input-placeholder.input_content {color: #999;}
 :-ms-input-placeholder.input_input {color: #999;}
 :-ms-input-placeholder.span_spaninput {color: #999;}
 
-.ui-state-active {background: #bc6ba6 !important;border: 2px solid #bc6ba6 !important;}
+.ui-state-active {background: #bc6ba6 !important;border: 1px solid #bc6ba6 !important;}
 
 .ui-datepicker {width: 400px !important;}
 
 .liFWPZ {display: inline-block;width: 105px;height: 30px;text-align: left;margin-top: 4px;cursor: pointer;}
 
-.ulFWPZ {display: inline-block;padding-left: 0;}
+.ulFWPZ {display: inline-block;padding-left: 0;margin:0;}
 
-.SRK:focus {border: 2px solid #bc6ba6;color: #333333 !important;}
+.SRK:focus {border: 1px solid #bc6ba6;color: #333333 !important;}
 
 
 .span_xzdz {color: #ad5b97;cursor: pointer;}
@@ -131,11 +131,11 @@
 .div_body_yhdl {position: absolute;top: 100px;z-index: 1101;display: none;width: 460px;height: 420px;margin: 0 auto;background-color: #fff;border-radius: 4px;padding: 0 25px;box-shadow: 0px 0px 8px #888;}
 .div_body_yhdl .Info {font-size: 12px;width: 100%;height:20px;padding:0 10px !important;}
 
-.div_row_zp .div_row_right .div_upload{ border: 2px solid #cccccc;}
+.div_row_zp .div_row_right .div_upload{ border: 1px solid #cccccc;}
 
-#edui1{border: 2px solid #cccccc}
-#edui49{border: 2px solid #cccccc}
-#edui97{border: 2px solid #cccccc}
+#edui1{border: 1px solid #cccccc}
+#edui49{border: 1px solid #cccccc}
+#edui97{border: 1px solid #cccccc}
 
 .edui-editor iframe{ width: 99.1% !important;}
 
@@ -143,13 +143,13 @@
 .span_fbxx:hover {background: #ad5b97;}
 
 /*服务区域*/
-.div_row_right_FWFW{position: absolute;font-size: 15px;display: none;margin-top: -4px;margin-left: 183px;width: 476px;height: 408px;border: 2px solid #cccccc;border-radius: 2px;background: #ffffff;}
-.div_row_right_FWFW .div_row_right_FWFW_top{ border-bottom: 2px solid #cccccc;display: block;height: 43px;width: 472px;background-color: #eeeff1;}
+.div_row_right_FWFW{position: absolute;font-size: 14px;display: none;margin-top: -4px;margin-left: 183px;width: 476px;height: 408px;border: 1px solid #cccccc;border-radius: 2px;background: #ffffff;}
+.div_row_right_FWFW .div_row_right_FWFW_top{ border-bottom: 1px solid #cccccc;display: block;height: 43px;width: 472px;background-color: #eeeff1;}
 .div_row_right_FWFW .div_row_right_FWFW_top .div_row_right_FWFW_top_qs{ width: 100px;height: 40px;background-color: #eeeff1;padding-top: 5px;display: inline-block;}
 .div_row_right_FWFW .div_row_right_FWFW_top .div_row_right_FWFW_top_qs .img_row_right_FWFW_top_qs{ margin-right: 2px;margin-left: 10px;}
 .div_row_right_FWFW .div_row_right_FWFW_top .div_row_right_FWFW_top_qs .img_row_right_FWFW_top_qs:hover{ cursor: pointer;}
 .div_row_right_FWFW .div_row_right_FWFW_top .img_row_right_FWFW_top_close{cursor: pointer;margin-top: 5px;margin-right: 5px; width: 20px;height: 20px;float: right;display: inline-block;}
-.div_row_right_FWFW .div_row_right_FWFW_left{ display: inline-block;width: 145px;height: 359px;border-right: 2px solid #cccccc;overflow-y: scroll;overflow-x: visible;}
+.div_row_right_FWFW .div_row_right_FWFW_left{ display: inline-block;width: 145px;height: 359px;border-right: 1px solid #cccccc;overflow-y: scroll;overflow-x: visible;}
 .div_row_right_FWFW .div_row_right_FWFW_left .ul_row_right_FWFW_left{ padding: 0;width: 126px;margin: 0;}
 .div_row_right_FWFW .div_row_right_FWFW_left .ul_row_right_FWFW_left .li_row_right_FWFW_left{height: 40px;width: 126px;display: block;background-color: #eeeff1;cursor: pointer;padding-top: 8px;padding-left: 10px;}
 .div_row_right_FWFW .div_row_right_FWFW_left .ul_row_right_FWFW_left .li_row_right_FWFW_left:hover{background-color: #d7d7d8;}
@@ -161,13 +161,13 @@
 .div_row_right_FWFW .div_row_right_FWFW_right .ul_row_right_FWFW_right .li_row_right_FWFW_right .img_row_right_FWFW_right{ margin-right: 2px;}
 
 /*小类标签*/
-.div_row_right_xlbq{position: absolute;font-size: 15px;display: none;margin-top: -4px;margin-left: 183px;width: 476px;height: 408px;border: 2px solid #cccccc;border-radius: 2px;background: #ffffff;}
-.div_row_right_xlbq .div_row_right_xlbq_top{ border-bottom: 2px solid #cccccc;display: block;height: 43px;width: 472px;background-color: #eeeff1;}
+.div_row_right_xlbq{position: absolute;font-size: 14px;display: none;margin-top: -4px;margin-left: 183px;width: 476px;height: 408px;border: 1px solid #cccccc;border-radius: 2px;background: #ffffff;}
+.div_row_right_xlbq .div_row_right_xlbq_top{ border-bottom: 1px solid #cccccc;display: block;height: 43px;width: 472px;background-color: #eeeff1;}
 .div_row_right_xlbq .div_row_right_xlbq_top .div_row_right_xlbq_top_qs{ width: 100px;height: 40px;background-color: #eeeff1;padding-top: 5px;display: inline-block;}
 .div_row_right_xlbq .div_row_right_xlbq_top .div_row_right_xlbq_top_qs .img_row_right_xlbq_top_qs{ margin-right: 2px;margin-left: 10px;}
 .div_row_right_xlbq .div_row_right_xlbq_top .div_row_right_xlbq_top_qs .img_row_right_xlbq_top_qs:hover{ cursor: pointer;}
 .div_row_right_xlbq .div_row_right_xlbq_top .img_row_right_xlbq_top_close{cursor: pointer;margin-top: 5px;margin-right: 5px; width: 20px;height: 20px;float: right;display: inline-block;}
-.div_row_right_xlbq .div_row_right_xlbq_left{ display: inline-block;width: 145px;height: 359px;border-right: 2px solid #cccccc;overflow-y: scroll;overflow-x: visible;}
+.div_row_right_xlbq .div_row_right_xlbq_left{ display: inline-block;width: 145px;height: 359px;border-right: 1px solid #cccccc;overflow-y: scroll;overflow-x: visible;}
 .div_row_right_xlbq .div_row_right_xlbq_left .ul_row_right_xlbq_left{ padding: 0;width: 126px;margin: 0;}
 .div_row_right_xlbq .div_row_right_xlbq_left .ul_row_right_xlbq_left .li_row_right_xlbq_left{height: 40px;width: 126px;display: block;background-color: #eeeff1;cursor: pointer;padding-top: 8px;padding-left: 50px;}
 .div_row_right_xlbq .div_row_right_xlbq_left .ul_row_right_xlbq_left .li_row_right_xlbq_left .img_row_right_xlbq_left{ margin-right: 2px;}
