--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -30,6 +30,21 @@
             </div>
             <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
         </div>
+        <div id="divSF" class="div_row">
+            <div class="div_row_left font_two">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">身份</span>
+            </div>
+            <div class="div_row_right">
+                <div class="div_radio" id="div_sf_gr">
+                    <img class="img_radio" id="img_sf_gr" /><label class="label_radio">个人</label>
+                </div>
+                <div class="div_radio" id="div_sf_jjr">
+                    <img class="img_radio" id="img_sf_jjr" /><label class="label_radio">经纪人</label>
+                </div>
+            </div>
+            <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
+        </div>
         <div id="divXQMC" class="div_row" style="z-index: 998">
             <div class="div_row_left">
                 <span class="span_required">*</span>
@@ -146,7 +161,7 @@
                 <div id="divZJTip" class="Warn" style="z-index: 989;"></div>
             </div>
         </div>
-        <div id="divBHFY" class="div_row" style="z-index: 988; margin-top: -18px;">
+        <div id="divBHFY" class="div_row" style="z-index: 988;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
                 <span>包含费用</span>
@@ -255,8 +270,8 @@
             <em class="em_split"></em>
         </div>
         <div id="divLXR" class="div_row" style="z-index: 993">
-            <div class="div_row_left font_three">
-                <span class="span_required">*</span><span id="spanLXR"> 联系人</span>
+            <div class="div_row_left font_three" style="margin-left:79px;">
+                <span class="span_required">*</span><span id="spanLXR">联系人</span>
             </div>
             <div class="div_row_right">
                 <input id="LXR" maxlength="50" column="LXR" class="input_input SRK" type="text" placeholder="请输入联系人" />
