--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
@@ -19,7 +19,7 @@
 .div_condition_toggle .span_condition_toggle .i_condition_tottle{width: 12px;height: 12px;display: inline-block;background-image: url(../images/head_nav_down.png);margin-left: 5px;}
 
 /*首页_主体_头部*/
-.div_body{display: block;width: 1200px;height: auto;background-color: #ffffff;padding-top: 2px;margin-top: 20px;}
+.div_body{display: block;width: 1200px;height: 2500px;background-color: #ffffff;padding-top: 2px;margin-top: 20px;}
 .div_body .ul_body_head {height: 40px;display: block;padding: 0;width: 100%;border-bottom: 1.5px solid #bc6ba6;}
 .div_body .ul_body_head .li_body_head {text-align: center;color: #999999;height: 38px;border-top-left-radius: 2px;border-top-right-radius: 2px;font-size: 16px;float: left;display: inline-block;padding: 6px 20px;border-top: 1px solid #cccccc;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;margin-left: 10px;}
 .div_body .ul_body_head .li_body_head:hover{ cursor: pointer;}
@@ -76,3 +76,12 @@
 .font_size18{ font-size: 18px;}
 .font_size19{ font-size: 19px;}
 .font_size20{ font-size: 20px;}
+
+.div_select_out {display: inline-block;width: 160px;height: 40px;border-radius: 4px;border: 1px solid #cccccc;position: relative;}
+.div_select_in {display: inline-block;width: 160px;height: 40px;border-radius: 4px;font-size: 14px;border: none;}
+.div_select_dropdown {float: left; width: 150px;position: relative;z-index: 1001;}
+.span_select {display: inline-block;width: 130px;height: 30px;text-align: center;margin-top: 6px;}
+.span_select_arrow {background-image: url(../images/arrow_down.png);width: 16px;height: 16px;display: inline-block;vertical-align: middle;}
+.ul_select {border-radius: 4px;margin-left: -1px;text-align: center;width: 160px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
+.li_select {height: 34px;text-align: left;display: block;padding-left: 6px;line-height: 34px;font-size: 14px;cursor: pointer;color: #999999;background: #FFFFFF;}
+.li_select:hover {background: #ececec;color: #333333;}
