--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -16,12 +16,21 @@
         <div id="div_condition_body_DD" class="div_condition_body"></div>
         <div id="div_condition_body_ZJ" class="div_condition_body"></div>
         <div id="div_condition_body_CZFS" class="div_condition_body"></div>
-	<div id="div_condition_body_QT" class="div_condition_body">
-		<ul class="ul_condition_body" id="ul_condition_body_QT" style="height: auto;">
-			<li class="li_condition_body_first">其他</li>
-		<li class="li_condition_body li_condition_body_active" id="0" onclick="SelectCondition(this,'出租方式')">全部</li>
-	</ul>
-	</div>
+	    <div id="div_condition_body_QT" class="div_condition_body">
+		    <ul class="ul_condition_body" id="ul_condition_body_QT" style="height: auto;">
+			    <li class="li_condition_body_first">其他</li>
+		        <li class="li_condition_body li_condition_body_active">
+                    <div id="divFWCXText" class="div_select_out">
+                        <div id="divFWCXSpan" class="div_select_in">
+                            <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">请选择朝向</span>
+                            <div class="span_select_arrow"></div>
+                        </div>
+                        <div id="divFWCX" class="div_select_dropdown">
+                        </div>
+                    </div>
+                </li>
+	        </ul>
+	    </div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
