--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -94,6 +94,22 @@
 
 .img_body_left_body_left_show{ width: 460px;height: 350px;}
 
-.div_shadow {display: none;background-color: #000;opacity: 0.5;position: fixed;top: 0;left: 0;z-index: 1100;width: 100%;height: 100%;}
+.img_body_left_body_xq_xx{cursor:pointer;}
 
-.div_img_window{ z-index: 1101;position: relative;}
+.div_shadow {display: none;background-color: #000;opacity: 0.9;position: fixed;top: 0;left: 0;z-index: 1100;width: 100%;height: 100%;}
+.div_close{display: none;cursor:pointer;background-image: url(../images/XXXX/GY/xxxx_gy_close.png);width:32px;height:32px;top:20px;right:30px;position:fixed;z-index:1101;}
+.div_show{ z-index: 1101;position: fixed;width:100%;height:80%;top:40px;display:none;}
+.div_show_left{z-index: 1101;position: fixed;width:20%;height:100%;top:0;left:0;}
+.div_show_left .img_show_left{background-image: url(../images/XXXX/GY/xxxx_gy_left.png);width:30px;height:52px;margin-left:40px;top:48%;position:fixed;}
+.div_show_right{z-index: 1101;position: fixed;width:20%;height:100%;top:0;right:0;text-align:right;}
+.div_show_right .img_show_right{background-image: url(../images/XXXX/GY/xxxx_gy_right.png);width:30px;height:52px;margin-right:40px;top:48%;right:0;position:fixed;}
+.div_show_middle{position: fixed;width:60%;height:100%;left:20%;text-align:center;}
+.div_show_middle_bottom{height:100px;text-align:center;}
+
+
+.ul_body_left_body_left_list{width: auto;height: 76px;padding: 0;margin-top: 20px;display:inline-block;}
+.ul_body_left_body_left_list .li_body_left_body_left_list_tp{float: left;height: 100px;margin-right: 10px;width: 130px;position: relative;}
+.ul_body_left_body_left_list .li_body_left_body_left_list_tp:hover{ cursor: pointer;}
+.ul_body_left_body_left_list .li_body_left_body_left_list_tp .img_body_left_body_left_list_tp{ width: 130px;height: 100px;}
+.ul_body_left_body_left_list .li_body_left_body_left_list_tp .div_img_body_left_body_left_list_tp{ position: absolute;width: 130px;height: 100px;top: 0;left: 0;background-color: rgba(0, 0, 0, 0.5); }
+.ul_body_left_body_left_list .li_body_left_body_left_list_tp .div_img_body_left_body_left_list_tp:hover{background-color: rgba(0, 0, 0, 0);}
