--- a/android_app/app/src/main/res/layout/fbxx/layout/fb_fc_zjbhfy.xml
+++ b/android_app/app/src/main/res/layout/fbxx/layout/fb_fc_zjbhfy.xml
@@ -6,12 +6,16 @@
 
         <LinearLayout style="@style/ll_fb_fc_zjbhfy_top">
             <TextView style="@style/tv_fb_fc_zjbhfy" android:text="租金包含费用" />
-            <TextView style="@style/tv_fb_fc_zjbhfy_wc" android:text="完成" />
+            <TextView android:id="@+id/tvwc" style="@style/tv_fb_fc_zjbhfy_wc" android:text="完成" />
         </LinearLayout>
 
-        <LinearLayout android:id="@+id/ll_fb_fc_zjbhfy_body" style="@style/ll_fb_fc_zjbhfy_body">
+        <ScrollView android:id="@+id/sv_channel" style="@style/sv_fb_fc_zjbhfy_main">
 
-        </LinearLayout>
+            <LinearLayout android:id="@+id/ll_fb_fc_zjbhfy_body" style="@style/ll_fb_fc_zjbhfy_body">
+
+            </LinearLayout>
+
+        </ScrollView>
 
     </LinearLayout>
 
